--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </li>
 
             <li>
-              <h3 class="slider_info__title">Изысканность и cтиль</h3>
+              <h3 class="slider_info__title">Init</h3>
               <p class="slider_info__desc">
                 Мы не просто наносим выбранную Вами татуировку. Мы предварительно советуем Вам, какие цвета, рисунки Вам больше подойдут, куда лучше всего нанести татуировку, а также какая татуировка поможет добиться тех или иных жизненных целей.
               </p>
