--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="resources/common/css/common.css" />
-  <link rel="stylesheet" href="resources/common/css/style.css" />
   <link rel="stylesheet" href="resources/bxslider/css/jquery.bxslider.css" />
+  <link rel="stylesheet" href="resources/common/css/style.css" />
 
   <!-- Application-specific meta tags -->
   <!-- Open Graph protocol -->
@@ -67,6 +67,7 @@
               </p>
               <br>
             </li>
+
             <li>
               <h3 class="slider_info__title">Изысканность и cтиль</h3>
               <p class="slider_info__desc">
@@ -82,11 +83,73 @@
               </p>
               <br>
             </li>
-
           </ul>
+        </div>
+
+        <div class="list m-list-header">
+          <div class="list__wrap_title">
+            <h3 class="list__title">цветное<br>татту</h3>
+            <h3 class="list__title">графика</h3>
+            <h3 class="list__title">абстрактный<br>стиль</h3>
+            <h3 class="list__title">реализм</h3>
+          </div>
+
+          <div class="list__previews_wrap grid">
+            <div class="list__preview_wrap col">
+              <img src="resources/common/img/list/tatto.png" alt="" class="list__preview">
+              <a href="https://vk.com" class="list__link">посмотреть</a>
+            </div>
+            <div class="list__preview_wrap col">
+              <img src="resources/common/img/list/grafica.png" alt="" class="list__preview">
+              <a href="https://vk.com" class="list__link">посмотреть</a>
+            </div>
+            <div class="list__preview_wrap col">
+              <img src="resources/common/img/list/abstract.png" alt="" class="list__preview">
+              <a href="https://vk.com" class="list__link">посмотреть</a>
+            </div>
+            <div class="list__preview_wrap col">
+              <img src="resources/common/img/list/realism.png" alt="" class="list__preview">
+              <a href="https://vk.com" class="list__link">посмотреть</a>
+            </div>
+          </div>
         </div>
       </div>
     </header>
+
+    <article class="about">
+      <div class="about__inner cf">
+        <div class="about__studio">
+
+        </div>
+
+        <div class="about__master list m-list-masters grid pull-right">
+          <h4 class="list__header">
+            <span>мастера резиденты</span>
+          </h4>
+
+          <div class="list__preview_wrap col">
+            <img src="resources/common/img/masters/viktor.png" alt="" class="list__preview">
+            <p class="list__name">виктор</p>
+            <a href="https://vk.com" class="list__link">работы мастера</a>
+          </div>
+          <div class="list__preview_wrap col">
+            <img src="resources/common/img/masters/evgenii.png" alt="" class="list__preview">
+            <p class="list__name">женя</p>
+            <a href="https://vk.com" class="list__link">работы мастера</a>
+          </div>
+          <div class="list__preview_wrap col">
+            <img src="resources/common/img/masters/ruslan.png" alt="" class="list__preview">
+            <p class="list__name">руслан</p>
+            <a href="https://vk.com" class="list__link">работы мастера</a>
+          </div>
+          <div class="list__preview_wrap col">
+            <img src="resources/common/img/masters/incognito.png" alt="" class="list__preview">
+            <p class="list__name">тайный мастер</p>
+            <a href="https://vk.com" class="list__link">работы мастера</a>
+          </div>
+        </div>
+      </div>
+    </article>
 
   </div>
 <!-- Scripts -->
