--- a/index.html
+++ b/index.html
@@ -1,79 +1,162 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<!--[if lt IE 7 ]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7 ]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8 ]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
+<!--[if IE 9 ]>    <html class="no-js ie9" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<head>
+  <meta charset="utf-8">
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Phonix : " />
+  <title>Welcome / Project</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+  <!-- Meta tags -->
+  <meta name="description" content="">
+  <meta name="keywords" content="" />
+  <meta name="author" content="" />
+  <meta name="Copyright" content="" />
 
-    <title>Phonix</title>
-  </head>
+  <!-- Mobile viewport and optimize -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="HandheldFriendly" content="true">
+  <meta http-equiv="Cache-Control" content="no-cache"/>
 
-  <body>
+  <!-- Internet Explore -->
+  <meta http-equiv="cleartype" content="on">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!--[if lt IE 9]>
+    <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/BestPracticeProject/phonix">View on GitHub</a>
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="resources/common/img/favicons/favicon.ico">
+  <link rel="apple-touch-icon" href="resources/common/img/favicons/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="resources/common/img/favicons/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="resources/common/img/favicons/apple-touch-icon-114x114.png">
+  <!-- for windows8 -->
+  <meta name="application-name" content="Project">
+  <meta name="msapplication-TileImage" content="resources/common/img/favicons/favicon.png">
+  <meta name="msapplication-TileColor" content="#fff">
 
-          <h1 id="project_title">Phonix</h1>
-          <h2 id="project_tagline"></h2>
+  <!-- Modernizr v2.7.2-->
+  <script src="resources/common/js/libs/modernizr-2.7.2.js"></script>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/BestPracticeProject/phonix/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/BestPracticeProject/phonix/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="resources/common/css/common.css" />
+  <link rel="stylesheet" href="resources/bxslider/css/jquery.bxslider.css" />
+  <link rel="stylesheet" href="resources/common/css/style.css" />
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+  <!-- Application-specific meta tags -->
+  <!-- Open Graph protocol -->
+  <meta property="og:type" content="website"/>
+  <meta property="og:title" content="" />
+  <meta property="og:description" content="" />
+  <meta property="og:image" content="" />
+</head>
+<body>
+  <div class="wrapper">
+    <header class="header">
+      <div class="header__inner">
+      <a href="index.html" class="header__logo"></a>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        <div class="header__info">
+          <ul class="slider_info j-slider_info">
+            <li>
+              <h3 class="slider_info__title">Изысканность и cтиль</h3>
+              <p class="slider_info__desc">
+                Мы не просто наносим выбранную Вами татуировку. Мы предварительно советуем Вам, какие цвета, рисунки Вам больше подойдут, куда лучше всего нанести татуировку, а также какая татуировка поможет добиться тех или иных жизненных целей.
+              </p>
+              <br>
+            </li>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+            <li>
+              <h3 class="slider_info__title">Изысканность и cтиль</h3>
+              <p class="slider_info__desc">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis rem iste impedit dolorem ut, laudantium quo fugit excepturi explicabo perspiciatis! Animi inventore laboriosam fugit molestias vitae quaerat, ad, fugiat error.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam quas quam ipsam numquam repudiandae, quidem commodi laborum quia. Vel impedit aperiam, quod nihil similique cum quae quisquam veritatis omnis vitae!
+              </p>
+              <br>
+            </li>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+            <li>
+              <h3 class="slider_info__title">Init</h3>
+              <p class="slider_info__desc">
+                Мы не просто наносим выбранную Вами татуировку. Мы предварительно советуем Вам, какие цвета, рисунки Вам больше подойдут, куда лучше всего нанести татуировку, а также какая татуировка поможет добиться тех или иных жизненных целей.
+              </p>
+              <br>
+            </li>
+          </ul>
+        </div>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+        <div class="list m-list-header">
+          <div class="list__wrap_title">
+            <h3 class="list__title">цветное<br>татту</h3>
+            <h3 class="list__title">графика</h3>
+            <h3 class="list__title">абстрактный<br>стиль</h3>
+            <h3 class="list__title">реализм</h3>
+          </div>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+          <div class="list__previews_wrap grid">
+            <div class="list__preview_wrap col">
+              <img src="resources/common/img/list/tatto.png" alt="" class="list__preview">
+              <a href="https://vk.com" class="list__link">посмотреть</a>
+            </div>
+            <div class="list__preview_wrap col">
+              <img src="resources/common/img/list/grafica.png" alt="" class="list__preview">
+              <a href="https://vk.com" class="list__link">посмотреть</a>
+            </div>
+            <div class="list__preview_wrap col">
+              <img src="resources/common/img/list/abstract.png" alt="" class="list__preview">
+              <a href="https://vk.com" class="list__link">посмотреть</a>
+            </div>
+            <div class="list__preview_wrap col">
+              <img src="resources/common/img/list/realism.png" alt="" class="list__preview">
+              <a href="https://vk.com" class="list__link">посмотреть</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+    <article class="about">
+      <div class="about__inner cf">
+        <div class="about__studio">
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+        </div>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+        <div class="about__master list m-list-masters grid pull-right">
+          <h4 class="list__header">
+            <span>мастера резиденты</span>
+          </h4>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+          <div class="list__preview_wrap col">
+            <img src="resources/common/img/masters/viktor.png" alt="" class="list__preview">
+            <p class="list__name">виктор</p>
+            <a href="https://vk.com" class="list__link">работы мастера</a>
+          </div>
+          <div class="list__preview_wrap col">
+            <img src="resources/common/img/masters/evgenii.png" alt="" class="list__preview">
+            <p class="list__name">женя</p>
+            <a href="https://vk.com" class="list__link">работы мастера</a>
+          </div>
+          <div class="list__preview_wrap col">
+            <img src="resources/common/img/masters/ruslan.png" alt="" class="list__preview">
+            <p class="list__name">руслан</p>
+            <a href="https://vk.com" class="list__link">работы мастера</a>
+          </div>
+          <div class="list__preview_wrap col">
+            <img src="resources/common/img/masters/incognito.png" alt="" class="list__preview">
+            <p class="list__name">тайный мастер</p>
+            <a href="https://vk.com" class="list__link">работы мастера</a>
+          </div>
+        </div>
+      </div>
+    </article>
 
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+  </div>
+<!-- Scripts -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script>window.jQuery || document.write("<script src='resources/common/js/libs/jquery-1.11.1.min.js'>\x3C/script>")</script>
+<script src="resources/bxslider/js/jquery.bxslider.min.js"></script>
+<script src="resources/common/js/common.js"></script>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Phonix maintained by <a href="https://github.com/BestPracticeProject">BestPracticeProject</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+</body>
 </html>
