--- a/index.html
+++ b/index.html
@@ -151,6 +151,57 @@
       </div>
     </article>
 
+    <footer class="footer">
+      <div class="footer__inner">
+        <div class="footer__item">
+          <h4 class="footer__title">Последние новости</h4>
+          <div class="footer__article">
+            <time class="footter_article_time">20.04</time>
+            <p class="footer__txt">
+              «Татуировка» - это искусство передачи индивидуального стиля через узоры и надписи, нанесенные на кожу. Считается что впервые термином «татуировка» были названы рисунки, которые украшали тела туземцев на Таити во время путешествий Кука. Но какое бы понятие не вкладывали в слово «татуировка», все-таки это не просто украшение на теле.
+            </p>
+          </div>
+
+          <div class="footer__article">
+            <time class="footter_article_time">15.07</time>
+            <p class="footer__txt">
+              Это особое ритуальное действо, способное не только изменить характер и привычки человека, но и изменить его жизнь. И если и Вы желаете изменить свою жизнь и тело, получить эстетическое удовольствие от процедуры нанесения тату, тогда добро пожаловать в салон.
+            </p>
+          </div>
+
+          <div class="footer__article">
+            <time class="footter_article_time">23.08</time>
+            <p class="footer__txt">
+              «Татуировка» - это искусство передачи индивидуального стиля через узоры и надписи, нанесенные на кожу. Считается что впервые термином «татуировка» были названы рисунки, которые украшали тела туземцев на Таити во время путешествий Кука. Но какое бы понятие не вкладывали в слово «татуировка», все-таки это не просто украшение на теле.
+            </p>
+          </div>
+        </div>
+
+        <div class="footer__item">
+          <h4 class="footer__title">Наши услуги</h4>
+          <ul class="footer__list">
+            <li class="footer__list_item">Пирсинг</li>
+            <li class="footer__list_item">Татуаж лица</li>
+            <li class="footer__list_item">Художественная татуировка</li>
+            <li class="footer__list_item">Реставрация и коррекция тату</li>
+          </ul>
+        </div>
+
+        <div class="footer__item">
+          <h4 class="footer__title">Контакты</h4>
+          <address class="footer__address">ул. чичибабина, 8</address>
+          <p class="footer__ext">время работы:</p>
+          <p class="footer__time footer__ext">09:00&nbsp;&mdash; 19:00</p>
+          <p class="footer__ext">выходной воскресенье</p>
+          <p><a href="vk.com" class="footer__link" title="смотреть на карте" target="_blank">карта</a></p>
+
+          <a href="tel: 0577552397" class="footer__tel m-footer__tel-home">057 755 23 97;</a>
+          <a href="tel: 0666229786" class="footer__tel">066 622 97 86;</a>
+          <a href="tel: 0937314601" class="footer__tel">093 731 46 01;</a>
+        </div>
+      </div>
+    </footer>
+
   </div>
 <!-- Scripts -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
