--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
     <footer class="footer">
       <div class="footer__inner">
-        <div class="footer__item">
+        <div class="footer__item m-footer__item-news">
           <h4 class="footer__title">Последние новости</h4>
           <div class="footer__article">
             <time class="footter_article_time">20.04</time>
@@ -177,7 +177,7 @@
           </div>
         </div>
 
-        <div class="footer__item">
+        <div class="footer__item m-footer__item-service">
           <h4 class="footer__title">Наши услуги</h4>
           <ul class="footer__list">
             <li class="footer__list_item">Пирсинг</li>
@@ -187,7 +187,7 @@
           </ul>
         </div>
 
-        <div class="footer__item">
+        <div class="footer__item m-footer__item-contacts">
           <h4 class="footer__title">Контакты</h4>
           <address class="footer__address">ул. чичибабина, 8</address>
           <p class="footer__ext">время работы:</p>
@@ -198,6 +198,12 @@
           <a href="tel: 0577552397" class="footer__tel m-footer__tel-home">057 755 23 97;</a>
           <a href="tel: 0666229786" class="footer__tel">066 622 97 86;</a>
           <a href="tel: 0937314601" class="footer__tel">093 731 46 01;</a>
+
+          <ul class="footer__list_hub">
+            <li class="footer__hub__item"><a href="vk.com" class="footer__list_link m-footer__list_link-vk" target="_blank" title="Посмотреть в Вконтакте"></a></li>
+            <li class="footer__hub__item"><a href="fb.com" class="footer__list_link m-footer__list_link-fb" target="_blank" title="Посмотреть в facebook"></a></li>
+            <li class="footer__hub__item"><a href="vimeo.com" class="footer__list_link m-footer__list_link-vimeo" target="_blank" title="Посмотреть на vimeo"></a></li>
+          </ul>
         </div>
       </div>
     </footer>
