--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <!-- Favicon -->
+    <!-- Favicon <--></-->
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
@@ -39,6 +39,7 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="resources/common/css/common.css" />
     <link rel="stylesheet" href="resources/common/css/gallery.css" />
+    <link href="resources/common/css/lightbox.css" rel="stylesheet" />
     <!-- Application-specific meta tags -->
     <!-- Open Graph protocol -->
     <meta property="og:type" content="website"/>
@@ -72,107 +73,147 @@
                 <button class="filter category__btn m-category__btn_secret" data-filter=".f-secret">тайный мастер</button>
             </div>
         </div>
-        <div class="works__list_wrap j-filters" id="MixItUp6B860A">
-            <div class="mix works__item f-advs m-works__item">
+        <div class="works__list_wrap j-filters" id="Container">
+            <div class="mix works__item f-victor f-graphics m-works__item">
                 <div class="works__item_inner">
-                    <img src="resources/common/img/gallery_small/1.png" class="works__pic"/>
+                    <a href="resources/common/img/gallary_big/1.png" class="" data-lightbox="roadtrip">
+                        <img src="resources/common/img/gallery_small/1.png" class="works__pic"/>
+                    </a>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-jenya f-abstraction m-works__item">
                 <div class="works__item_inner">
+                    <a href="resources/common/img/gallary_big/2.png" class="" data-lightbox="roadtrip">
                     <img src="resources/common/img/gallery_small/2.png" class="works__pic"/>
+                    </a>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-ruslan f-abstraction m-works__item">
                 <div class="works__item_inner">
-                    <img src="resources/common/img/gallery_small/3.png" class="works__pic"/>
+                    <a href="resources/common/img/gallary_big/3.png" class="" data-lightbox="roadtrip">
+                        <img src="resources/common/img/gallery_small/3.png" class="works__pic"/>
+                    </a>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-secret f-realism m-works__item">
                 <div class="works__item_inner">
-                    <img src="resources/common/img/gallery_small/4.png" class="works__pic"/>
+                    <a href="resources/common/img/gallary_big/4.png" class="" data-lightbox="roadtrip">
+                        <img src="resources/common/img/gallery_small/4.png" class="works__pic"/>
+                    </a>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-victor f-color m-works__item">
                 <div class="works__item_inner">
-                    <img src="resources/common/img/gallery_small/5.png" class="works__pic"/>
+                    <a href="resources/common/img/gallary_big/5.png" class="" data-lightbox="roadtrip">
+                        <img src="resources/common/img/gallery_small/5.png" class="works__pic"/>
+                    </a>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-jenya f-graphics f-realism f-color m-works__item">
                 <div class="works__item_inner">
-                    <img src="resources/common/img/gallery_small/6.png" class="works__pic"/>
+                    <a href="resources/common/img/gallary_big/6.png" class="" data-lightbox="roadtrip">
+                        <img src="resources/common/img/gallery_small/6.png" class="works__pic"/>
+                    </a>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-ruslan f-realism f-abstraction m-works__item">
                 <div class="works__item_inner">
-                    <img src="resources/common/img/gallery_small/7.png" class="works__pic"/>
+                    <a href="resources/common/img/gallary_big/7.png" class="" data-lightbox="roadtrip">
+                        <img src="resources/common/img/gallery_small/7.png" class="works__pic"/>
+                    </a>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-secret m-works__item">
                 <div class="works__item_inner">
-                    <img src="resources/common/img/gallery_small/8.png" class="works__pic"/>
+                    <a href="resources/common/img/gallary_big/8.png" class="" data-lightbox="roadtrip">
+                        <img src="resources/common/img/gallery_small/8.png" class="works__pic"/>
+                    </a>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-victor f-color m-works__item">
                 <div class="works__item_inner">
-                    <img src="resources/common/img/gallery_small/9.png" class="works__pic"/>
+                    <a href="resources/common/img/gallary_big/9.png" class="" data-lightbox="roadtrip">
+                        <img src="resources/common/img/gallery_small/9.png" class="works__pic"/>
+                    </a>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-jenya f-realism f-abstraction m-works__item">
                 <div class="works__item_inner">
-                    <img src="resources/common/img/gallery_small/10.png" class="works__pic"/>
+                    <a href="resources/common/img/gallary_big/10.png" class="" data-lightbox="roadtrip">
+                        <img src="resources/common/img/gallery_small/10.png" class="works__pic"/>
+                    </a>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-ruslanf-realism f-realism f-graphics m-works__item">
                 <div class="works__item_inner">
-                    <img src="resources/common/img/gallery_small/11.png" class="works__pic"/>
+                    <a href="resources/common/img/gallary_big/11.png" class="" data-lightbox="roadtrip">
+                        <img src="resources/common/img/gallery_small/11.png" class="works__pic"/>
+                    </a>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-secret f-realism f-realism m-works__item">
                 <div class="works__item_inner">
-                    <img src="resources/common/img/gallery_small/12.png" class="works__pic"/>
+                    <a href="resources/common/img/gallary_big/12.png" class="" data-lightbox="roadtrip">
+                        <img src="resources/common/img/gallery_small/12.png" class="works__pic"/>
+                    </a>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-victor f-abstraction m-works__item">
                 <div class="works__item_inner">
-                    <img src="resources/common/img/gallery_small/13.png" class="works__pic"/>
+                    <a href="resources/common/img/gallary_big/13.png" class="" data-lightbox="roadtrip">
+                        <img src="resources/common/img/gallery_small/13.png" class="works__pic"/>
+                    </a>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-jenya f-realism f-abstraction m-works__item">
                 <div class="works__item_inner">
-                    <img src="resources/common/img/gallery_small/14.png" class="works__pic"/>
+                    <a href="resources/common/img/gallary_big/14.png" class="" data-lightbox="roadtrip">
+                        <img src="resources/common/img/gallery_small/14.png" class="works__pic"/>
+                    </a>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-ruslan f-realism f-graphics f-color m-works__item">
                 <div class="works__item_inner">
-                    <img src="resources/common/img/gallery_small/15.png" class="works__pic"/>
+                    <a href="resources/common/img/gallary_big/15.png" class="" data-lightbox="roadtrip">
+                        <img src="resources/common/img/gallery_small/15.png" class="works__pic"/>
+                    </a>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-secret f-color m-works__item">
                 <div class="works__item_inner">
-                    <img src="resources/common/img/gallery_small/16.png" class="works__pic"/>
+                    <a href="resources/common/img/gallary_big/16.png" class="" data-lightbox="roadtrip">
+                        <img src="resources/common/img/gallery_small/16.png" class="works__pic"/>
+                    </a>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-victor m-works__item">
                 <div class="works__item_inner">
-                    <img src="resources/common/img/gallery_small/17.png" class="works__pic"/>
+                    <a href="resources/common/img/gallary_big/17.png" class="" data-lightbox="roadtrip">
+                        <img src="resources/common/img/gallery_small/17.png" class="works__pic"/>
+                    </a>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-jenya f-realism f-abstraction m-works__item">
                 <div class="works__item_inner">
-                    <img src="resources/common/img/gallery_small/18.png" class="works__pic"/>
+                    <a href="resources/common/img/gallary_big/18.png" class="" data-lightbox="roadtrip">
+                        <img src="resources/common/img/gallery_small/18.png" class="works__pic"/>
+                    </a>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-ruslan f-graphics m-works__item">
                 <div class="works__item_inner">
                     <div class="works__item_inner">
+                    <a href="resources/common/img/gallary_big/19.png" class="" data-lightbox="roadtrip">
                         <img src="resources/common/img/gallery_small/19.png" class="works__pic"/>
+                    </a>
                     </div>
                 </div>
             </div>
-            <div class="mix works__item f-advs m-works__item">
+            <div class="mix works__item f-secret f-realism m-works__item">
                 <div class="works__item_inner">
+                    <a href="resources/common/img/gallary_big/20.png" class="" data-lightbox="roadtrip">
                     <img src="resources/common/img/gallery_small/20.png" class="works__pic"/>
+                    </a>    
                 </div>
             </div>
         </div>
@@ -189,6 +230,7 @@
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script>window.jQuery || document.write("<script src='resources/common/js/libs/jquery-1.11.1.min.js'>\x3C/script>")</script>
+<script src="resources/common/js/lightbox.min.js"></script>
 <script src="resources/common/js/plugin.js"></script>
 <script src="resources/common/js/common.js"></script>
 </body>
